implementación de tailwind

--- a/mi-proyecto-actualizado-2-13/settings.json
+++ b/mi-proyecto-actualizado-2-13/settings.json
@@ -1,7 +1,7 @@
 {
   "galaxy.meteor.com": {
     "env": {
-      "MONGO_URL": "mongodb://juan-almario-okorum:5Q2Ayf6PaL2oNTek8@galaxyadmin_galaxyfreedb-01.mongodb.galaxy-cloud.io:30025,galaxyadmin_galaxyfreedb-02.mongodb.galaxy-cloud.io:30025,galaxyadmin_galaxyfreedb-03.mongodb.galaxy-cloud.io:30025/meteor-wallet-ocean-meteorapp-com?replicaSet=galaxyadmin_galaxyfreedb&ssl=true"
+      "MONGO_URL": "mongodb://juan-almario-okorum:gAGaFN2CFtrXfZjLE@galaxyadmin_galaxyfreedb-01.mongodb.galaxy-cloud.io:30025,galaxyadmin_galaxyfreedb-02.mongodb.galaxy-cloud.io:30025,galaxyadmin_galaxyfreedb-03.mongodb.galaxy-cloud.io:30025/meteor-wallet-juanito-meteorapp-com?replicaSet=galaxyadmin_galaxyfreedb&ssl=true"
     }
   }
 }
